fixtures/errors/bad_import_ref.hu
@reference tense from "helpers.hu"
